fix(bug: similar to LERGO-677) hebrew mobile dropdown for lessons and invitations is not completely visible. Add class for rtl mobile

--- a/app/styles/_lessonsIndex.scss
+++ b/app/styles/_lessonsIndex.scss
@@ -107,4 +107,16 @@
     }
 }
 
+@media screen and ( max-width : 768px ) {
+    .rtl {
+        #inviteIndex {
+            .invites-dropdown {
+                .dropdown-menu {
+                    margin-left: -125px;
+                }
+            }
+        }
+    }
+}
+
 
